canvas: add basic image draw test

--- a/templates/canvas/basic_shapes.html
+++ b/templates/canvas/basic_shapes.html
@@ -3,10 +3,10 @@
 {% block head %}
 {{ super() }}
 <link rel="stylesheet" href="{{ 'canvas/css/page.css' | static }}">
-<script type="text/javascript" src="{{ 'canvas/js/exp.js' | static }}"></script>
+<script type="text/javascript" src="{{ 'canvas/js/basic_shapes.js' | static }}"></script>
 {% endblock %}
 
-{% block title %}Canvas experiment{% endblock %}
+{% block title %}Basic Shapes{% endblock %}
 
 {% block body %}
 {{ super() }}
