add processing keyboard test

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,11 @@
 
 {% block head %}
 {{ super() }}
-<link href='http://fonts.googleapis.com/css?family=Snowburst+One' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Brawler' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,600,700,600italic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{{ 'main/css/index.css' | static }}">
 {% endblock %}
 
 {% block body %}
 {{ super() }}
-<h1>index is where the heart is</hi>
+<h1><span class="quot">&ldquo;</span>index is where the heart is<span class="quot">&#8222;</span></hi>
 {% endblock %}
