--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -2,6 +2,13 @@
 
 {% block title %}Welcome{% endblock %}
 
+{% block head %}
+{{ super() }}
+<link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,600,700,600italic' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="{{ '/static/main/css/index.css' }}">
+{% endblock %}
+
 {% block body -%}
-index
+{{ super() }}
+<h1><span class="quot">&ldquo;</span>index is where the heart is<span class="quot">&#8222;</span></hi>
 {%- endblock %}
