use grunt to build static folder in dev

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,10 @@
-index
+<!DOCTYPE html>
+<html>
+    <head>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <link type='text/css' rel='stylesheet' href="{{ url_for('static', filename='index.css')}}"/>
+    </head>
+    <body>
+        index hello
+    </body>
+</html>
