--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <link type='text/css' rel='stylesheet' href="{{ url_for('static', filename='index.css')}}"/>
+        <link type='text/css' rel='stylesheet' href="{{ 'index.css' | static }}"/>
     </head>
     <body>
         index hello
