--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <link type='text/css' rel='stylesheet' href="{{ 'index.css' | static }}"/>
-    </head>
-    <body>
-        index hello
-    </body>
-</html>
+{% extends 'main.html' %}
+
+{% block head %}
+    {{ super() }}
+    <link type='text/css' rel='stylesheet' href="{{ 'index.css' | static }}"/>
+{% endblock %}
+
+
+{% block body %}
+    index hello
+{% endblock %}
