--- a/noc/templates/noc/link_lister.html
+++ b/noc/templates/noc/link_lister.html
@@ -4,7 +4,8 @@
 
 {% block head %}
     {{ super() }}
-    <link href='http://fonts.googleapis.com/css?family=Buenard' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href='{{ 'noc/noc.css' | static }}' rel='stylesheet' type='text/css'>
 {% endblock %}
 
 {% block body -%}
