--- a/src-static/index.scss
+++ b/src-static/index.scss
@@ -1,3 +1,32 @@
+@import "compass/css3/text-shadow";
+
 html {
+    height: 100%;
+    body {
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+    }
     background-color: #5096DD;
+    color: #fff;
+    font-family: 'Share Tech', sans-serif;
+    white-space: nowrap;
+    .vertical_aligner {
+        height: 100%;
+    }
+    .vertical_aligner, h1 {
+        display: inline-block;
+        vertical-align: middle;
+    }
+    h1 {
+        white-space: normal;
+        width: 100%;
+        text-align: center;
+        font-weight: 400;
+        padding-bottom: 150px;
+        min-width: 170px;
+        @include text-shadow(20px 6px 0 rgba(255, 255, 255, 0.2),
+                     -10px -1px 0 rgba(43, 30, 0, 0.1)); 
+    }
 }
