ember: add deps

--- a/templates/ember_todo.html
+++ b/templates/ember_todo.html
@@ -4,6 +4,10 @@
         <meta charset="utf-8">
         <title>Ember.js TodoMVC</title>
         <link rel="stylesheet" href="{{ 'ember_todo/style.css' | static }}">
+        <script src="{{ 'vendor/jquery/jquery-2.0.3.js' | static }}"></script>
+        <script src="{{ 'vendor/handlebars/handlebars-v1.3.0.js' | static }}"></script>
+        <script src="{{ 'vendor/ember/ember.js' | static }}"></script>
+        <script src="{{ 'vendor/ember/ember-data.js' | static }}"></script>
     </head>
     <body>
         <section id="todoapp">
