--- a/templates/ember_todo.html
+++ b/templates/ember_todo.html
@@ -10,53 +10,57 @@
         <script src="{{ 'vendor/ember/ember-data.js' | static }}"></script>
     </head>
     <body>
-        <section id="todoapp">
-            <header id="header">
-                <h1>todos</h1>
-                <input type="text" id="new-todo" placeholder="What needs to be done?"/>
-            </header>
-            <section id="main">
-                <ul id="todo-list">
-                    <li class="completed">
-                        <input type="checkbox" class="toggle"/>
-                        <label>Learn Ember.js</label><button class="destroy"></button>
-                    </li>
-                    <li>
-                        <input type="checkbox" class="toggle"/>
-                        <label>...</label><button class="destroy"></button>
-                    </li>
-                    <li>
-                        <input type="checkbox" class="toggle"/>
-                        <label>Profit!</label><button class="destroy"></button>
-                    </li>
-                    <input type="checkbox" id="toggle-all"/>
-                </ul>
+        <script type="text/x-handlebars" data-template-name="todos">
+            <section id="todoapp">
+                <header id="header">
+                    <h1>todos</h1>
+                    <input type="text" id="new-todo" placeholder="What needs to be done?"/>
+                </header>
+                <section id="main">
+                    <ul id="todo-list">
+                        <li class="completed">
+                            <input type="checkbox" class="toggle"/>
+                            <label>Learn Ember.js</label><button class="destroy"></button>
+                        </li>
+                        <li>
+                            <input type="checkbox" class="toggle"/>
+                            <label>...</label><button class="destroy"></button>
+                        </li>
+                        <li>
+                            <input type="checkbox" class="toggle"/>
+                            <label>Profit!</label><button class="destroy"></button>
+                        </li>
+                        <input type="checkbox" id="toggle-all"/>
+                    </ul>
+                </section>
+
+                <footer id="footer">
+                    <span id="todo-count">
+                        <strong>2</strong> todos left
+                    </span>
+                    <ul id="filters">
+                        <li>
+                            <a href="all" class="selected">All</a>
+                        </li>
+                        <li>
+                            <a href="active">Active</a>
+                        </li>
+                        <li>
+                            <a href="completed">Completed</a>
+                        </li>
+                    </ul>
+
+                    <button id="clear-completed">
+                        Clear completed (1)
+                    </button>
+                </footer>
             </section>
 
-            <footer id="footer">
-                <span id="todo-count">
-                    <strong>2</strong> todos left
-                </span>
-                <ul id="filters">
-                    <li>
-                        <a href="all" class="selected">All</a>
-                    </li>
-                    <li>
-                        <a href="active">Active</a>
-                    </li>
-                    <li>
-                        <a href="completed">Completed</a>
-                    </li>
-                </ul>
-
-                <button id="clear-completed">
-                    Clear completed (1)
-                </button>
+            <footer id="info">
+                <p> Double-click to edit a todo</p>
             </footer>
-        </section>
-
-        <footer id="info">
-            <p> Double-click to edit a todo</p>
-        </footer>
+        </script>
+        <script src="{{ 'ember_todo/application.js' | static }}"></script>
+        <script src="{{ 'ember_todo/router.js' | static }}"></script>
     </body>
 </html>
