--- a/templates/ember_todo.html
+++ b/templates/ember_todo.html
@@ -11,6 +11,7 @@
     </head>
     <body>
         <script type="text/x-handlebars" data-template-name="todos">
+            {% raw %}
             <section id="todoapp">
                 <header id="header">
                     <h1>todos</h1>
@@ -18,19 +19,12 @@
                 </header>
                 <section id="main">
                     <ul id="todo-list">
-                        <li class="completed">
-                            <input type="checkbox" class="toggle"/>
-                            <label>Learn Ember.js</label><button class="destroy"></button>
-                        </li>
-                        <li>
-                            <input type="checkbox" class="toggle"/>
-                            <label>...</label><button class="destroy"></button>
-                        </li>
-                        <li>
-                            <input type="checkbox" class="toggle"/>
-                            <label>Profit!</label><button class="destroy"></button>
-                        </li>
-                        <input type="checkbox" id="toggle-all"/>
+                        {{#each}}
+                            <li {{bind-attr class="isCompleted:completed" }}>
+                                <input type="checkbox" class="toggle">
+                                <label>{{ title }}</label><button class="destroy"></button>
+                            </li>
+                        {{/each}}
                     </ul>
                 </section>
 
@@ -59,8 +53,10 @@
             <footer id="info">
                 <p> Double-click to edit a todo</p>
             </footer>
+            {% endraw %}
         </script>
         <script src="{{ 'ember_todo/application.js' | static }}"></script>
         <script src="{{ 'ember_todo/router.js' | static }}"></script>
+        <script src="{{ 'ember_todo/models/todo.js' | static }}"></script>
     </body>
 </html>
