--- a/templates/ember_todo.html
+++ b/templates/ember_todo.html
@@ -15,7 +15,7 @@
             <section id="todoapp">
                 <header id="header">
                     <h1>todos</h1>
-                    <input type="text" id="new-todo" placeholder="What needs to be done?"/>
+                    {{ input type="text" id="new-todo" placeholder="What needs to be done?" value=newTitle action="createTodo" }}
                 </header>
                 <section id="main">
                     <ul id="todo-list">
@@ -58,5 +58,6 @@
         <script src="{{ 'ember_todo/application.js' | static }}"></script>
         <script src="{{ 'ember_todo/router.js' | static }}"></script>
         <script src="{{ 'ember_todo/models/todo.js' | static }}"></script>
+        <script src="{{ 'ember_todo/controllers/todos_controller.js' | static }}"></script>
     </body>
 </html>
