--- a/templates/ember_todo.html
+++ b/templates/ember_todo.html
@@ -19,9 +19,9 @@
                 </header>
                 <section id="main">
                     <ul id="todo-list">
-                        {{#each}}
+                        {{#each itemController="todo"}}
                             <li {{bind-attr class="isCompleted:completed" }}>
-                                <input type="checkbox" class="toggle">
+                                {{ input type="checkbox" checked=isCompleted class="toggle" }}
                                 <label>{{ title }}</label><button class="destroy"></button>
                             </li>
                         {{/each}}
@@ -30,7 +30,7 @@
 
                 <footer id="footer">
                     <span id="todo-count">
-                        <strong>2</strong> todos left
+                        <strong>{{ remaining }}</strong> {{ inflection }} left
                     </span>
                     <ul id="filters">
                         <li>
@@ -59,5 +59,6 @@
         <script src="{{ 'ember_todo/router.js' | static }}"></script>
         <script src="{{ 'ember_todo/models/todo.js' | static }}"></script>
         <script src="{{ 'ember_todo/controllers/todos_controller.js' | static }}"></script>
+        <script src="{{ 'ember_todo/controllers/todo_controller.js' | static }}"></script>
     </body>
 </html>
