ember: add editing mode

--- a/templates/ember_todo.html
+++ b/templates/ember_todo.html
@@ -20,9 +20,13 @@
                 <section id="main">
                     <ul id="todo-list">
                         {{#each itemController="todo"}}
-                            <li {{bind-attr class="isCompleted:completed" }}>
-                                {{ input type="checkbox" checked=isCompleted class="toggle" }}
-                                <label>{{ title }}</label><button class="destroy"></button>
+                            <li {{bind-attr class="isCompleted:completed isEditing:editing" }}>
+                                {{#if isEditing}}
+                                    {{ edit-todo class="edit" value=title focus-out="acceptChanges" insert-newline="acceptChanges" }}
+                                {{else}}
+                                    {{ input type="checkbox" checked=isCompleted class="toggle" }}
+                                    <label {{ action "editTodo" on="doubleClick"}}>{{ title }}</label><button class="destroy"></button>
+                                {{/if}}
                             </li>
                         {{/each}}
                     </ul>
@@ -60,5 +64,6 @@
         <script src="{{ 'ember_todo/models/todo.js' | static }}"></script>
         <script src="{{ 'ember_todo/controllers/todos_controller.js' | static }}"></script>
         <script src="{{ 'ember_todo/controllers/todo_controller.js' | static }}"></script>
+        <script src="{{ 'ember_todo/views/edit_todo_view.js' | static }}"></script>
     </body>
 </html>
