--- a/templates/ember_todo.html
+++ b/templates/ember_todo.html
@@ -25,7 +25,7 @@
                                     {{ edit-todo class="edit" value=title focus-out="acceptChanges" insert-newline="acceptChanges" }}
                                 {{else}}
                                     {{ input type="checkbox" checked=isCompleted class="toggle" }}
-                                    <label {{ action "editTodo" on="doubleClick"}}>{{ title }}</label><button class="destroy"></button>
+                                    <label {{ action "editTodo" on="doubleClick"}}>{{ title }}</label><button {{ action "removeTodo" }} class="destroy"></button>
                                 {{/if}}
                             </li>
                         {{/each}}
