--- a/templates/ember_todo.html
+++ b/templates/ember_todo.html
@@ -10,6 +10,25 @@
         <script src="{{ 'vendor/ember/ember-data.js' | static }}"></script>
     </head>
     <body>
+
+
+        <script type="text/x-handlebars" data-template-name="todos/index">
+            {% raw %}
+                <ul id="todo-list">
+                    {{#each itemController="todo"}}
+                        <li {{bind-attr class="isCompleted:completed isEditing:editing" }}>
+                            {{#if isEditing}}
+                                {{ edit-todo class="edit" value=title focus-out="acceptChanges" insert-newline="acceptChanges" }}
+                            {{else}}
+                                {{ input type="checkbox" checked=isCompleted class="toggle" }}
+                                <label {{ action "editTodo" on="doubleClick"}}>{{ title }}</label><button {{ action "removeTodo" }} class="destroy"></button>
+                            {{/if}}
+                        </li>
+                    {{/each}}
+                </ul>
+            {% endraw %}
+        </script>
+
         <script type="text/x-handlebars" data-template-name="todos">
             {% raw %}
             <section id="todoapp">
@@ -18,18 +37,8 @@
                     {{ input type="text" id="new-todo" placeholder="What needs to be done?" value=newTitle action="createTodo" }}
                 </header>
                 <section id="main">
-                    <ul id="todo-list">
-                        {{#each itemController="todo"}}
-                            <li {{bind-attr class="isCompleted:completed isEditing:editing" }}>
-                                {{#if isEditing}}
-                                    {{ edit-todo class="edit" value=title focus-out="acceptChanges" insert-newline="acceptChanges" }}
-                                {{else}}
-                                    {{ input type="checkbox" checked=isCompleted class="toggle" }}
-                                    <label {{ action "editTodo" on="doubleClick"}}>{{ title }}</label><button {{ action "removeTodo" }} class="destroy"></button>
-                                {{/if}}
-                            </li>
-                        {{/each}}
-                    </ul>
+                    {{ outlet }}
+                    <input type="checkbox" id="toggle-all">
                 </section>
 
                 <footer id="footer">
