ember: make toggle all button work

--- a/templates/ember_todo.html
+++ b/templates/ember_todo.html
@@ -38,7 +38,7 @@
                 </header>
                 <section id="main">
                     {{ outlet }}
-                    <input type="checkbox" id="toggle-all">
+                    {{input type="checkbox" id="toggle-all" checked=allAreDone}}
                 </section>
 
                 <footer id="footer">
