ember: work with localstorage adpter

--- a/templates/ember_todo.html
+++ b/templates/ember_todo.html
@@ -8,6 +8,7 @@
         <script src="{{ 'vendor/handlebars/handlebars-v1.3.0.js' | static }}"></script>
         <script src="{{ 'vendor/ember/ember.js' | static }}"></script>
         <script src="{{ 'vendor/ember/ember-data.js' | static }}"></script>
+        <script src="{{ 'vendor/ember/localstorage_adapter.js' | static }}"></script>
     </head>
     <body>
 
